src/components/Card/Card.module.css
.card__container {
    text-align: center;
    width: 18.5rem;
    height: 15.3125rem;
    border: 1px solid #d9d9d9;
    border-radius: 0.5rem;
}

.logo {
    padding-top: 24px;
}

.card__container__content p {
    padding: 0 24px
}

.card__container__content h2 {
    padding: 0 20.5px;
}
.card__container__content {
    font-size: 1rem;
    font-weight: 400;
}

